# grpc_cpp_demo

./: .clang-format  .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt
client/include/: client.h
client/src/: client.cpp  main.cpp
protocols/: CMakeLists.txt  messaging.proto  sample.proto
protocols/include/: messaging.grpc.pb.h  messaging.pb.h  sample.grpc.pb.h  sample.pb.h
server/: CMakeLists.txt
server/include/: server.h
server/src/: main.cpp  server.cpp
tests/: CMakeLists.txt  test_client_server.cpp
